--- a/index.html
+++ b/index.html
@@ -3,8 +3,51 @@
   <head>
     <title>Lucky Tier Calculator</title>
     <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-image: url("https://github.com/klingzz/LuckyTierCalculator/blob/d30b4b427695ecc486cde52be2969ad31766f838/312337390_503000491722643_2617819755003462627_n.jpg?raw=true");
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
+      }
+      h1 {
+        text-align: center;
+        font-size: 36px;
+        color: #ffffff;
+        margin-top: 50px;
+        margin-bottom: 50px;
+      }
+      label {
+        display: block;
+        margin-bottom: 10px;
+        color: #f9ffd9;
+        font-size: 24px;
+        font-weight: 900;
+      }
       input {
-        margin-right: 10px;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        margin-bottom: 20px;
+      }
+      button {
+        background-color: #4caf50;
+        color: white;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 18px;
+      }
+      button:hover {
+        background-color: #3e8e41;
+      }
+      p {
+        color: #333;
+        font-size: 18px;
+        font-weight: bold;
       }
     </style>
     <script>
@@ -20,6 +63,7 @@
         var result = y > 0 ? trophies / y : 0;
         var result = result * 120;
         var result = result * 1.025;
+        var result = Math.floor(result);
 
         // Display the result
         document.getElementById("result").innerHTML =
@@ -31,13 +75,15 @@
   </head>
   <body>
     <h1>Lucky Tier Calculator</h1>
-    <label for="days">Days remaining:</label>
-    <input type="number" id="days" />
-    <label for="hours">Hours remaining:</label>
-    <input type="number" id="hours" />
-    <label for="trophies">Current Trophies of Lucky Tier:</label>
-    <input type="number" id="trophies" />
-    <button onclick="calculate()">Calculate Lucky Tier</button>
+    <form>
+      <label for="days">Days remaining:</label>
+      <input type="number" id="days" />
+      <label for="hours">Hours remaining:</label>
+      <input type="number" id="hours" />
+      <label for="trophies">Current Trophies of Lucky Tier:</label>
+      <input type="number" id="trophies" />
+      <button type="button" onclick="calculate()">Calculate Lucky Tier</button>
+    </form>
     <p id="result"></p>
   </body>
 </html>
