--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         background-color: #3e8e41;
       }
       p {
-        color: #333;
+        color: #ffffff;
         font-size: 18px;
         font-weight: bold;
       }
